# k8s-recommender

./: README.md
load_controller/: Makefile  Project.toml
load_controller/src/: LoadController.jl
load_controller/test/: Project.toml  runtests.jl
metrics_tracker/: BUILD  MODULE.bazel
metrics_tracker/proto/: BUILD  metrics.proto
metrics_tracker/src/main/java/com/metricstracker/client/: BUILD  MetricsTrackerClient.java
metrics_tracker/src/main/java/com/metricstracker/model/: BUILD  NodeMetric.java  PodMetric.java
metrics_tracker/src/main/java/com/metricstracker/server/: BUILD  MetricsTrackerServer.java  MetricsTrackerService.java
metrics_tracker/src/main/java/com/metricstracker/service/: BUILD  MetricsService.java  PrometheusClient.java  PrometheusMetricsService.java
metrics_tracker/src/test/java/com/metricstracker/: BUILD
metrics_tracker/src/test/java/com/metricstracker/client/: PrometheusClientTest.java
metrics_tracker/src/test/java/com/metricstracker/server/: MetricsTrackerService.java
metrics_tracker/src/test/java/com/metricstracker/service/: PrometheusMetricsServiceTest.java
scaling_controller/: BUILD  MODULE.bazel
scaling_controller/k8s/: example-crd.yaml
scaling_controller/src/main/java/com/scalingcontroller/: AppProvisionerReconciler.java  ApplicationProvisioner.java  ApplicationProvisionerSpec.java  BUILD  Service.java
solver/: Makefile  Project.toml
solver/src/: Solver.jl
solver/test/: runtests.jl
