module(
    name = "metrics_tracker",
    version = "0.0.1",
)

# Define Bazel central repository for modules.
bazel_dep(name = "rules_java", version = "5.5.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "googleapis", repo_name = "com_google_googleapis", version = "0.0.0-20240326-1c8d509c5")

# Correct the gRPC Java dependency to reference the correct repo name and version
bazel_dep(name = "grpc-java", version = "1.67.1")
bazel_dep(name = "protobuf", version = "29.0-rc1")

bazel_dep(name = "rules_jvm_external", version = "6.4")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "com.fasterxml.jackson.core:jackson-core:2.15.2",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "org.slf4j:slf4j-api:2.0.16",
        "org.slf4j:slf4j-simple:2.0.16",
        "io.kubernetes:client-java:18.0.1",
    ],
)

use_repo(maven, "maven")
