module(
    name = "metrics_tracker",
    version = "0.0.1",
)

# Define Bazel central repository for modules.
bazel_dep(name = "rules_java", version = "5.5.0")

bazel_dep(name = "rules_jvm_external", version = "6.4")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.javaoperatorsdk:operator-framework:4.4.4",
        "io.fabric8:kubernetes-client:6.8.1",
        "io.fabric8:kubernetes-model:6.8.1",
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "org.slf4j:slf4j-api:2.0.7",
        "ch.qos.logback:logback-classic:1.4.11",
        "org.junit.jupiter:junit-jupiter-api:5.10.0",
        "org.mockito:mockito-core:5.5.0",
    ],
)

use_repo(maven, "maven")
